--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ then everything finally falls into nothingness. But I have decided to resume my 
                     <h2 class="section-heading text-uppercase">About</h2>
                     <h3 class="section-subheading text-muted"> "I never dreamed about success</br>I worked for it." </h3>
                 </div>
-<li class="list-group-item">I am a fresh graduate from SNS college of technology. Fascinated to work on a current and future technologies in Software field.I have a ood knowledge of both front-end and back-end techniques. I love structure and order and I also stand for quality. I love spending time on fixing little details and optimizing web application. Also I like working in a team, l'll learn faster and much more.</li>
+<li class="list-group-item">I am a fresh graduate from SNS college of technology. Fascinated to work on a current and future technologies in Software field. I have a good knowledge of both front-end and back-end techniques. I love structure and order and I also stand for quality. I love spending time on fixing little details and optimizing web application. Also I like working in a team, l'll learn faster and much more.</li>
 </div>
 </section>
   <!-- Education-->
