--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ then everything finally falls into nothingness. But I have decided to resume my 
 <div class="text-center">
 <div class="carousel-item active bg-light">
  <b> Course Name : </b> Java 8</br>
-<b>   Institution : </b> Be positive Institute of Technology </br>
+<b>   Institution : </b> Be positive Institute for Skilling pvt ltd</br>
 <b>  Duration : </b>3 Months</div> 
 <div class="carousel-item bg-light"> 
 <b> Course Name : </b> C++ Tutorial</br>
