--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@ then everything finally falls into nothingness. But I have decided to resume my 
                                 <br />
                                 Of My
                                 <br />
-                                 Journey! 
-<h class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact"> .....</a></h>
+                                 <a  href="#contact" style = "color : white">
+                                 Journey!
+                                 </a>
                             </h4>
                         </div>
                     </li>
