--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ then everything finally falls into nothingness. But I have decided to resume my 
                             <a class="btn btn-dark btn-social mx-2" href="mailto:jega7354@gmail.com"><i class="fa fa-envelope"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://m.facebook.com/profile.php?id=100007325178542&ref=content_filter"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/__cj__007__/"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://in.linkedin.com/in/jegatheesh-c-038681169"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://in.linkedin.com/in/jegatheesh-c"><i class="fab fa-linkedin-in"></i></a>
 <h3 class="section-subheading text-muted"> </h3>
     <p class="section-subheading text-muted">Copyright © jegatheesh-conspectus 2020</p>
                         <a class="mr-3" href="#!">Privacy Policy</a>
