--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ then everything finally falls into nothingness. But I have decided to resume my 
                     <h2 class="section-heading text-uppercase">Contact Me</h2>
                     <h3 class="section-subheading text-muted1">One day or Day one It's your choice</br> Feel free to contact with me</h3>
                    <div class="col-lg-4">
-                        <div class="team-member">
+                        <div class="team-member text-center">
                             <img class="mx-auto rounded-circle" src="assets/img/jega.jpg" alt="" />
                             <h4 class ="text-muted1"> Er. C. Jegatheesh</h4>
                             <p class="text-muted1">Web & Software Developer </br> 27/111, Kollakudi vilai,</br>Eathavilai, Mekkamandapam(post),
