--- a/index.html
+++ b/index.html
@@ -325,8 +325,7 @@ then everything finally falls into nothingness. But I have decided to resume my 
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Me</h2>
                     <h3 class="section-subheading text-muted1">One day or Day one It's your choice</br> Feel free to contact with me</h3>
-                   <div class="col-lg-4">
-                        <div class="team-member text-center">
+                        <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/jega.jpg" alt="" />
                             <h4 class ="text-muted1"> Er. C. Jegatheesh</h4>
                             <p class="text-muted1">Web & Software Developer </br> 27/111, Kollakudi vilai,</br>Eathavilai, Mekkamandapam(post),
@@ -339,7 +338,6 @@ then everything finally falls into nothingness. But I have decided to resume my 
     <p class="section-subheading text-muted">Copyright © jegatheesh-conspectus 2020</p>
                         <a class="mr-3" href="#!">Privacy Policy</a>
                         <a href="#!">Terms of Use</a>
-                        </div>
                     </div>
                     </div>
             </div>
