--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <a class="dropdown-item"><a class = "dropdown-link js-scroll-trigger" href="#professional">professional</a></a>
                         <a class="dropdown-item"><a class="dropdown-link js-scroll-trigger" href="#personal">personal</a></a>
         </div></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a><ul>/li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
