--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+	<meta name="google-site-verification" content="8WDxnzXSfmBpP5i3QQZipeS1sCXJvJ_68PBroOurgi4" />
         <title>Jegatheesh- Conspectus</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
