navigation color and border update

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ then everything finally falls into nothingness. But I have decided to resume my 
                     <h2 class="section-heading text-uppercase">About</h2>
                     <h3 class="section-subheading text-muted"> "I never dreamed about success</br>I worked for it." </h3>
                 </div>
-<li class="list-group-item">I am a fresh graduate from SNS college of technology. Fascinated to work on a current and future technologies in Software field. I have a good knowledge of both front-end and back-end techniques. I love structure and order and I also stand for quality. I love spending time on fixing little details and optimizing web application. Also I like working in a team, l'll learn faster and much more.</li>
+<li class="list-group-item">Passionated Software Engineer with 1+ years of experience in industry standard web application development. Willingness to work on a current and future technologies in Software field. I have a good knowledge of both front-end and back-end techniques. I love structure and order and I also stand for quality. I love spending time on fixing little details and optimizing web application. Also I like working in a team, l'll learn faster and much more.</li>
 </div>
 </section>
   <!-- Education-->
@@ -96,19 +96,6 @@ then everything finally falls into nothingness. But I have decided to resume my 
                             <div class="timeline-body"><p class="text-muted">  Completed from SNS College of Technology, Coimbatore with 9.18 CGPA</p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of My
-                                <br />
-                                 <a  href="#contact" style = "color : white">
-                                 Journey!
-                                 </a>
-                            </h4>
-                        </div>
-                    </li>
                 </ul>
             </div>
         </section>
@@ -117,7 +104,7 @@ then everything finally falls into nothingness. But I have decided to resume my 
         <section class="page-section bg-light" id="Project">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Project</h2>
+                    <h2 class="section-heading text-uppercase">Academic Projects</h2>
                     <h3 class="section-subheading text-muted"> Where you innovate, how you innovate, and what you innovate are design problems.</h3>
                 </div>
                 <div class="row">
@@ -145,7 +132,7 @@ then everything finally falls into nothingness. But I have decided to resume my 
                             </a>
                             <div class="Project-caption">
                                 <div class="Project-caption-heading">Jegatheesh - Conspectus</div>
-                                <div class="Project-caption-subheading text-muted">Web Design</div>
+                                <div class="Project-caption-subheading text-muted">Web Application</div>
                             </div>
                         </div>
                     </div>
@@ -389,7 +376,7 @@ email/SMS alert whenever those readings goes beyond critical values, fourth part
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Jegatheesh - Conspectus</h2>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/02-full.jpg" alt="" />
-                                    <p> This web design project is designed to express my knowledge and experience in web development.</p>
+                                    <p> This web-site project was designed to express my knowledge and skills in the web development.</p>
                                     <ul class="list-inline">
                                         <li>Duration : 1 week</li>
                                         <li>Category: Web Design</li>
