--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <!-- Custom color palette CSS -->
+    <link href="css/color-palette.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -60,7 +62,7 @@
     <section class="page-section bg-light1" id="About">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase"><span class="title-icon">👨‍💻</span> About</h2>
+                <h1><span class="title-icon">👨‍💻</span> About</h1>
                 <h3 class="section-subheading text-muted">“I never dreamed about success<br>I built it line by line.”
                 </h3>
             </div>
@@ -237,7 +239,7 @@
     </section>
 
 
-    <section class="page-section bg-light" id="Course">
+    <section class="page-section" id="Course">
         <div class="container">
             <div class="text-center">
                 <h1><span class="title-icon">📝 </span> Courses & Certifications</h1>
@@ -247,27 +249,23 @@
 
                 <div class="carousel-inner ">
                     <div class="text-center">
-                        <div class="carousel-item active bg-light">
-                            <b> Course Name : </b> Java 8</br>
-                            <b> Institution : </b> Be positive Institute for Skilling pvt ltd</br>
-                            <b> Duration : </b>3 Months
+                        <div class="carousel-item active">
+                            <b> Certificate Name : </b>
+                            Oracle Certified Associate, Java SE 8 Programmer</br>
+                            <b> Issuer : </b> Oracle</br>
+                            <b> Issued Date : </b> March 28, 2021</br>
                         </div>
-                        <div class="carousel-item bg-light">
-                            <b> Course Name : </b> C++ Tutorial</br>
-                            <b> Institution : </b> Solo Learn</br>
-                            <b> Duration : </b>4 weeks
+                        <div class="carousel-item">
+                            <b> Certificate Name : </b> JavaScript</br>
+                            <b> Issuer : </b> Educba</br>
+                            <b> Issued Date : </b>June 15, 2022</br>
                         </div>
-                        <div class="carousel-item bg-light">
-                            <b> Course Name : </b> An Introduction to RPA</br>
-                            <b> Institution : </b> Automation Anywhere University</br>
-                            <b> Duration : </b>15 hours
-                        </div>
-                        <div class="carousel-item bg-light">
-                            <b> Course Name : </b> SEO Tutorial</br>
+                        <div class="carousel-item">
+                            <b> Course Name : </b> Search Engine Optimization</br>
                             <b> Institution : </b> Udemy</br>
-                            <b> Duration : </b>1 hour
+                            <b> Duration : </b>2 weeks
                         </div>
-                        <div class="carousel-item bg-light">
+                        <div class="carousel-item">
                             <b> Course Name : </b> The online Marketing Fundamentals</br>
                             <b> Institution : </b> Google Digital Unlocked</br>
                             <b> Duration : </b>4 weeks
@@ -387,8 +385,8 @@
                     with me”</h3>
                 <div class="team-member">
                     <img class="mx-auto rounded-circle" src="assets/img/jega.jpg" alt="" />
-                    <h4 class="text-muted1"> Er. C. Jegatheesh</h4>
-                    <p class="text-muted1">Web & Software Developer </br> 27/111, Kollakudi vilai,</br>Eathavilai,
+                    <h4 class="text-muted1"> Er. Jegatheesh C</h4>
+                    <p class="text-muted1">Software Engineer </br> 27/111, Kollakudi vilai,</br>Eathavilai,
                         Mekkamandapam(post),
                         </br> Kanyakumari - 629166</br> Ph.No : +91 9894371096 </p>
                     <a class="btn btn-dark btn-social mx-2" href="mailto:jega7354@gmail.com"><i
@@ -403,8 +401,8 @@
                     <h3 class="section-subheading text-muted"> </h3>
                     <p class="section-subheading text-muted">Copyright © jegatheesh-conspectus <span
                             id="currentYear"></span></p>
-                    <a class="mr-3" href="#!">Privacy Policy</a>
-                    <a href="#!">Terms of Use</a>
+                    <!-- <a class="mr-3" href="#!">Privacy Policy</a>
+                    <a href="#!">Terms of Use</a> -->
                 </div>
             </div>
         </div>
