Favicon and seo changes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description"
+        content="Jegatheesh C - Software Engineer with 4+ years of experience in full-stack development. Java, Spring Boot, React, Angular specialist based in India." />
+    <meta name="keywords"
+        content="Jegatheesh C, Jegatheesh, Software Engineer, Java Developer, Spring Boot, React, Angular, Full Stack Developer, India" />
+    <meta name="author" content="Jegatheesh C" />
     <meta name="google-site-verification" content="8WDxnzXSfmBpP5i3QQZipeS1sCXJvJ_68PBroOurgi4" />
-    <title>Jegatheesh- Conspectus</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <title>Jegatheesh C - Software Engineer | Java | Spring Boot | React | Angular</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Font Awesome icons (free version)-->
@@ -22,6 +29,46 @@
     <link href="css/styles.css" rel="stylesheet" />
     <!-- Custom color palette CSS -->
     <link href="css/color-palette.css" rel="stylesheet" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jegamax.github.io/Jegatheesh-Conspectus/">
+    <meta property="og:title" content="Jegatheesh C - Software Engineer Portfolio">
+    <meta property="og:description"
+        content="Software Engineer with 4+ years of experience in full-stack web application development using Java, Spring Boot, React, and Angular.">
+    <meta property="og:image" content="https://jegamax.github.io/Jegatheesh-Conspectus/assets/img/jega.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://jegamax.github.io/Jegatheesh-Conspectus/">
+    <meta property="twitter:title" content="Jegatheesh C - Software Engineer Portfolio">
+    <meta property="twitter:description"
+        content="Software Engineer with 4+ years of experience in full-stack web application development using Java, Spring Boot, React, and Angular.">
+    <meta property="twitter:image" content="https://jegamax.github.io/Jegatheesh-Conspectus/assets/img/jega.jpg">
+    <link rel="canonical" href="https://jegamax.github.io/Jegatheesh-Conspectus/" />
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Jegatheesh C",
+  "jobTitle": "Software Engineer",
+  "url": "https://jegamax.github.io/Jegatheesh-Conspectus/",
+  "sameAs": [
+    "https://www.linkedin.com/in/jegatheesh-c",
+    "https://www.instagram.com/_.jegatheesh._.c._/",
+    "https://m.facebook.com/profile.php?id=100007325178542"
+  ],
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Kanyakumari",
+    "addressRegion": "Tamil Nadu",
+    "postalCode": "629166",
+    "addressCountry": "India"
+  },
+  "email": "jega7354@gmail.com",
+  "telephone": "+919894371096",
+  "description": "Software Engineer with 4+ years of experience in full-stack web application development using Java, Spring Boot, React, and Angular."
+}
+</script>
 </head>
 
 <body id="page-top">
@@ -51,11 +98,11 @@
     <header class="masthead">
         <div class="container">
             <div class="masthead-subheading">Welcome To My Conspectus!</div>
-            <div class="masthead-heading text-uppercase"> " Philosophy gets on my nerves. If we analyze the ultimate
+            <div class="masthead-heading text-uppercase"> “Philosophy gets on my nerves. If we analyze the ultimate
                 ground of everything,
                 then everything finally falls into nothingness. But I have decided to resume my lectures again and look
                 the Hydra of doubt straight into the eye,
-                and it be quite ominous if one values one's life."</div>
+                and it be quite ominous if one values one's life.”</div>
         </div>
     </header>
 
@@ -384,7 +431,8 @@
                     contact
                     with me”</h3>
                 <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="assets/img/jega.jpg" alt="" />
+                    <img class="mx-auto rounded-circle" src="assets/img/jega.jpg"
+                        alt="Jegatheesh C - Software Engineer" />
                     <h4 class="text-muted1"> Er. Jegatheesh C</h4>
                     <p class="text-muted1">Software Engineer </br> 27/111, Kollakudi vilai,</br>Eathavilai,
                         Mekkamandapam(post),
