--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta property="og:title" content="Jegatheesh C - Software Engineer Portfolio">
     <meta property="og:description"
         content="Software Engineer with 4+ years of experience in full-stack web application development using Java, Spring Boot, React, and Angular.">
-    <meta property="og:image" content="https://jegamax.github.io/Jegatheesh-Conspectus/assets/img/jega.jpg">
+    <meta property="og:image" content="https://jegamax.github.io/Jegatheesh-Conspectus/assets/img/jegatheesh-profile.png">
     <!-- Locale for OG -->
     <meta property="og:locale" content="en_US">
 
@@ -50,7 +50,7 @@
     <meta property="twitter:title" content="Jegatheesh C - Software Engineer Portfolio">
     <meta property="twitter:description"
         content="Software Engineer with 4+ years of experience in full-stack web application development using Java, Spring Boot, React, and Angular.">
-    <meta property="twitter:image" content="https://jegamax.github.io/Jegatheesh-Conspectus/assets/img/jega.jpg">
+    <meta property="twitter:image" content="https://jegamax.github.io/Jegatheesh-Conspectus/assets/img/jegatheesh-profile.png">
     <link rel="canonical" href="https://jegamax.github.io/Jegatheesh-Conspectus/" />
     <!-- Optional sitemap link -->
     <link rel="sitemap" type="application/xml" href="https://jegamax.github.io/Jegatheesh-Conspectus/sitemap.xml" />
@@ -440,7 +440,7 @@
                     contact
                     with me”</h3>
                 <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="assets/img/jega.jpg"
+                    <img class="mx-auto rounded-circle" src="assets/img/jegatheesh-profile.png"
                         alt="Jegatheesh C - Software Engineer" />
                     <h4 class="text-muted1"> Er. Jegatheesh C</h4>
                     <p class="text-muted1">Software Engineer </br> 27/111, Kollakudi vilai,</br>Eathavilai,
