--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger"> JEGATHEESH C<img src="assets/img/navbar-loo.svg" alt="Jegatheesh C logo" /></a>
+            <a class="navbar-brand js-scroll-trigger"> JEGATHEESH C<img src="assets/img/logo-jc.png" alt="Jegatheesh C logo" /></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
